--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body{
 }
 h1{
   margin-left: .5em;
+  margin-bottom: 0;
 }
 .flex{
   display: flex;
@@ -30,3 +31,15 @@ h1{
   background: #03506f;
   color: #fff;
 }
+.card-wrap{ margin-top: 2em; }
+.card-link { 
+  padding: 1em;
+  margin: 1em;
+  border: 1px solid #4a4a4a;
+  box-shadow: 2px 2px 10px #000;
+  background: #03506f;
+  color: #fff; }
+.card-link a { 
+  color: #fff; 
+  text-decoration: none; 
+  text-transform: uppercase; }
