add loding message

--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,4 @@ h1{
   color: #fff; 
   text-decoration: none; 
   text-transform: uppercase; }
+  .loading{display: flex; align-items: center; justify-content: center ;}
