--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ h1{
   color: #fff;
   border-radius: 5px;
 }
-.card-wrap{ margin-top: 2em; }
+.card-wrap{ margin-top: 2em; margin-bottom: 2em; }
 .card-link { 
   padding: 1em;
   margin: 1em;
